# QuickTurns

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  QuickTurns.cpp  QuickTurns.h  README.md  ReaderView.cpp  main.cpp  vcpkg.json
.github/workflows/: main.yml
src/: CMakeLists.txt  main.cpp  resources.qrc
src/ArchiveExtractor/: ArchiveExtractor.cpp  CMakeLists.txt
src/ArchiveExtractor/include/: ArchiveExtractor.h
src/ArchiveExtractor/include/ArchiveExtractor/: ArchiveExtractor.h
src/BookMetadata/: BookMetadata.cpp  CMakeLists.txt
src/BookMetadata/include/: BookMetadata.h
src/DataBase/: CMakeLists.txt  DataBase.cpp  bmain.cpp  bookDB.cpp  bookDB.h  main.cpp
src/DataBase/include/: DataBase.h
src/EpubReader/: CMakeLists.txt  EpubReader.cpp
src/EpubReaderDummy/: CMakeLists.txt  EpubReader.cpp
src/MainView/: CMakeLists.txt  MainView.cpp
src/MainView/include/MainView/: MainView.h
src/Parser/: CMakeLists.txt  Parser.cpp
src/ReaderView/: CMakeLists.txt  ReaderView.cpp
src/ReaderView/include/ReaderView/: ReaderView.h
src/Styles/: continuous-spreads.html  examples.css
src/UserInterface/: CMakeLists.txt  HomeView.cpp  ReaderView.cpp  Server.cpp  Server.py  StackedView.cpp
src/UserInterface/Server/: CMakeLists.txt  main.cpp
src/UserInterface/include/: HomeView.h  ReaderView.h  Server.h  StackedView.h
src/Util/: CMakeLists.txt  Checksum.cpp  Dirs.cpp  StringOp.cpp  Util.cpp
src/Util/include/: Checksum.h  StringOp.h
src/Util/include/Util/: Checksum.h  Util.h
test/: CMakeLists.txt  TestConstants.h  main.cpp
test/AllTests/: CMakeLists.txt
test/TestArchiveExtractor/: CMakeLists.txt  test.cpp  test.h
test/TestBookMetadata/: CMakeLists.txt  test.cpp
test/TestDataBase/: CMakeLists.txt  test.cpp
test/TestUtil/: CMakeLists.txt  testChecksum.cpp  testStringOp.cpp
test/data/: sample.epub
